feat: new transaction metadata entity